2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilename): sysconf() can return a
	negative value (e.g. -1).  Verify that the value is greater than 0
	before using it.  Addresses Coverity 384798 "Out-of-bounds
	access".

2023-08-09  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: 64 bytes for BMP header is reserved for OS/2
	https://www.fileformat.info/format/os2bmp/egff.htm

2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ReadBMPImage): Re-indent/format for consistency.
	(ReadBMPImage): Adjust expected bmp_info.size (change 64 to 120).

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: Data behind declared BMP header should not be read.
	It could poison newly converted image with garbage.

2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (GenerateCineonTimeStamp): Correct strlcpy()
	length arguments so they are based on the actual destination
	buffer size.  Based on a report from Dirk Müller
	<dmueller@suse.de> that the test suite does not pass with the new
	glibc 2.38 (which finally provides strlcpy()/strlcat()) due to a
	fortify assertion.

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: CI chunk must have biSize only 12 or 40.

2023-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Default field pass count to 1
	since "Unsupported" tags return two arguments.

2023-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jp2/src/libjasper/include/jasper/jas_types.h: MSVC 17.6.5 needs
	the _PFX_PTR definition.

	* coders/bmp.c (ReadBMPImage): Fix GCC 13.1.0 warning about
	quantum_bits being possibly used while uninitialized.  I don't see
	how that is possible based on current logic, but avoid the
	warning.

	* magick/gem.c (ExpandAffine): Mark as a pure function.

2023-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
