@@ -40,6 +40,9 @@
 <p>2023-08-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>coders/identity.c (ReadIdentityImage): Check the return value
+from AllocateImageColormap().  Addresses Coverity 384802
+&quot;Unchecked return value&quot;.</p></li>
 <li><p>magick/utility.c (ExpandFilename): sysconf() can return a
 negative value (e.g. -1).  Verify that the value is greater than 0
 before using it.  Addresses Coverity 384798 &quot;Out-of-bounds
