@@ -1,5 +1,9 @@
 2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/identity.c (ReadIdentityImage): Check the return value
+	from AllocateImageColormap().  Addresses Coverity 384802
+	"Unchecked return value".
+
 	* magick/utility.c (ExpandFilename): sysconf() can return a
 	negative value (e.g. -1).  Verify that the value is greater than 0
 	before using it.  Addresses Coverity 384798 "Out-of-bounds
